--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .vscode/settings.json
 Assembly-CSharp.csproj
 Coalition.sln
+Library/CurrentLayout-default.dwlt
+Library/CurrentMaximizeLayout.dwlt
